--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,6 @@
     "strict": true,   
     "noImplicitAny": true,                                   /* Enable all strict type-checking options. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+  },
+  "exclude": ["node_modules", "**/*.test.ts"]
 }
